--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -1,5 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <string name="crowdloan_contributions_placeholder">Ваши взносы\n появятся здесь</string>
+
+    <string name="crowdloan_active_section_format_v2_0">Активные</string>
+    <string name="common_completed_with_count_v2_0">Завершённые</string>
+
+    <string name="crowdloan_your_contributions">Мои взносы</string>
+    <string name="crowdloan_about">О краудлоанах</string>
+
+    <string name="crowdloan_moonbeam_encryption_not_supported_title">Используемый аккаунт не поддерживается для взноса</string>
+    <string name="crowdloan_moonbeam_encryption_not_supported_message">
+        Краудлоан Moonbeam поддерживает только аккаунты с крипографией SR25519. Пожалуйста, используйте другой аккаунт для взноса
+    </string>
+
+    <string name="crowdloan_moonbeam_reward_destination">Назначение вознаграждения для %s</string>
+
+    <string name="crowdloan_moonbeam_terms_submit">Подтвердить согласие</string>
+    <string name="crowdloan_terms_conditions_named">%s\'s Условиями использования и Политикой конфиденциальности</string>
+
+    <string name="crowdloan_moonbeam_terms_subtitle">
+        Для участия вам необходимо предоставить своё согласие с Условиями использования и Политикой конфиденциальности он-чейн.
+        Данная процедура выполняется единоразово и распространяется на все последующие взносы в краудлоан Moonbeam
+    </string>
+
+    <string name="crowdloan_moonbeam_region_restriction_title">Ваш регион не поддерживается</string>
+    <string name="crowdloan_moonbeam_region_restriction_message">Данный краудлоан недоступен в вашем регионе.</string>
+
+    <string name="crowdloan_moonbeam_missing_account_title">Необходим аккаунт Moonbeam</string>
+    <string name="crowdloan_moonbeam_missing_account_message">
+        Для участия в краудлоане Moonbeam вам необходимо добавить Moonbeam аккаунт к активному кошельку
+    </string>
+
+    <string name="wallet_your_balance">Ваш баланс</string>
+    <string name="wallet_balance_transferable">Доступно для перевода</string>
+
+    <string name="accounts_change_chain_secrets">Изменить аккаунт</string>
+
+    <string name="crowdloan_agree_with_policy">Согласитесь с Правилами и Условиями</string>
+    <string name="crowdloan_privacy_policy">Я ознакомился и согласен с Правилами и Условиями</string>
+    <string name="crowdloan_referral_code">Реферальный код</string>
+
+    <string name="transaction_details_view_explorer">Открыть в %s</string>
+
+    <string name="account_invalid_derivation_path_title">Некорректный путь деривации</string>
+    <string name="account_invalid_derivation_path_message">Путь деривации содержить неподдерживамые символы или имеет некорретную структуру</string>
+
+    <string name="import_json_unsupported_crypto_title">Неподдерживаемый тип шиврования</string>
+    <string name="import_json_unsupported_ethereum_crypto_message">Не поддерживается импорт аккаунта с Substrate секретом в сеть с Ethereum шифрованием</string>
+    <string name="import_json_unsupported_substrate_crypto_message">Не поддерживается импорт аккаунта с Ethereum секретом в сеть с Substrate шифрованием</string>
+
+    <string name="common_chain">Сеть</string>
+    <string name="import_json_chains_dont_match">Выбранный JSON файл был создан для другой сети.</string>
+
+    <string name="profile_accounts_title_2_0">Кошельки</string>
+    <string name="username_setup_choose_title_2_0">Имя кошелька</string>
+    <string name="account_info_title_2_0">Кошелёк</string>
+
+    <string name="account_shared_secret">Аккаунты с общим секретом</string>
+    <string name="account_custom_secret">Аккаунты с изменённым секретом</string>
+    <string name="wallet_assets">Активы</string>
+
+    <string name="account_no_chain_projection">Аккаунт не найден</string>
+
     <string name="common_details">Подробности</string>
     <string name="common_next">Далее</string>
     <string name="common_cancel">Отмена</string>
@@ -10,7 +72,7 @@
     <string name="connection_error_message">Пожалуйста, проверьте подключение к Интернету и повторите попытку.</string>
     <string name="onboarding_restore_account">Восстановить</string>
     <string name="onboarding_terms_and_conditions_1">Я подтверждаю, что прочитал и согласен с
-Условиями использования и Политикой конфиденциальности</string>
+</string>
     <string name="onboarding_terms_and_conditions_2">Условиями использования</string>
     <string name="onboarding_privacy_policy">Политикой конфиденциальности</string>
     <string name="pincode_enter_pin_code">Введите PIN-код</string>
@@ -55,6 +117,7 @@
     <string name="recovery_json">JSON для восстановления</string>
     <string name="account_import_password_placeholder">Пароль</string>
     <string name="recover_json_hint">Вставьте json строку или загрузите файл…</string>
+    <string name="recover_json_upload">Загрузите файл</string>
     <string name="import_json_paste">Вставьте json</string>
     <string name="recovery_passphrase">Мнемоническая фраза</string>
     <string name="account_import_invalid_seed">Seed неверный. Пожалуйста, убедитесь, что введенные данные содержат 64 hex символа.</string>
@@ -254,7 +317,7 @@
     <string name="common_module">Модуль</string>
     <string name="wallet_asset_buy_with">Купить с</string>
     <string name="wallet_filters_title">Фильтры</string>
-    <string name="common_apply">Применять</string>
+    <string name="common_apply">Применить</string>
     <string name="common_reset">Сброс</string>
     <string name="wallet_filters_transfers">Переводы</string>
     <string name="wallet_filters_rewards_and_slashes">Вознаграждения и слэши</string>
