--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <string name="crowdloan_acala_learn_types">Learn more about different contributions to Acala</string>
+    <string name="crowdloan_acala_direct">Direct</string>
+    <string name="crowdloan_acala_liquid">Liquid</string>
+
     <string name="crowdloan_contributions_placeholder">Your contributions\n will appear here</string>
 
     <string name="crowdloan_active_section_format_v2_0">Active</string>
