--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <string name="crowdloan_missing_bonus_title">You have not applied bonus</string>
+    <string name="crowdloan_missing_bonus_message">If you don\'t have referral code, you can apply Nova referral code to receive bonus for your contribution</string>
+    <string name="crowdloan_missing_bonus_action">Apply bonus</string>
+
     <string name="crowdloan_contribution">Contribution</string>
     <string name="crowdloan_acala_learn_types">Learn more about different contributions to Acala</string>
     <string name="crowdloan_acala_direct">Direct</string>
