--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <string name="crowdloan_astar_wrong_referral">Реферальный код Astar должен являться корректным Polkadot адресом</string>
+
     <string name="crowdloan_missing_bonus_title">Вы не применили бонус</string>
     <string name="crowdloan_missing_bonus_message">Если у вас нет реферального кода, вы можете применить код Nova, чтобы получить бонус за свой вклад</string>
     <string name="crowdloan_missing_bonus_action">Применить</string>
