--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -150,6 +150,7 @@ transfers will appear here</string>
     <string name="common_edit">Edit</string>
     <string name="common_done">Done</string>
     <string name="accounts_add_wallet">Add wallet</string>
+    <string name="accounts_add_account">Add account</string>
     <string name="account_add_already_exists_message">Account already exists. Please, try another one.</string>
     <string name="about_website">Official Website</string>
     <string name="about_github">Github Source Code</string>
