--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <string name="about_version_template">Nova Wallet v%s</string>
+    <string name="about_website_v2_2_0">Website</string>
+    <string name="about_github_v2_2_0">Github</string>
+    <string name="about_telegram_v2_2_0">Telegram</string>
+    <string name="about_terms_v2_2_0">Terms &amp; Conditions</string>
+
+    <string name="about_twitter">Twitter</string>
+    <string name="about_rate_app">Rate us</string>
+
     <string name="crowdloan_contributions_with_source">%s (via %s)</string>
     <string name="crowdloan_astar_wrong_referral">Astar referral code should be a valid Polkadot address</string>
 
