--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <string name="account_derivation_path_invalid_title">Invalid format</string>
+    <string name="account_derivation_path_invalid_substrate">
+        Please, check that input is a mix of //’hard’ and /’soft’ where ‘hard’ and ‘soft’ can be any sequence of characters not including /.
+        The path can end up with ///’password’.\n\n
+        For example: //1/soramitsu///mypass.
+    </string>
+    <string name="account_derivation_path_invalid_ethereum">
+        Please, check that input is a mix of //’hard’ and /’soft’ where ’hard’ and ’soft’ can be any sequence of digits not including /.
+        The path can end up with ///’password’.\n\n
+        For example, //44//60//0/0/0///mypass.
+    </string>
+
+    <string name="account_substrate_crypto_type">Substrate keypair crypto type</string>
+    <string name="account_substrate_derivation_path">Substrate secret derivation path</string>
+    <string name="account_ethereum_crypto_type">Ethereum keypair crypto type</string>
+    <string name="account_ethereum_derivation_path">Ethereum secret derivation path</string>
+
     <string name="account_create_name_title">Create wallet nickname</string>
     <string name="account_create_name_subtitle">This nickname will be displayed only for you and stored locally on your mobile device. </string>
     <string name="account_wallet_nickname">Wallet nickname</string>
