--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <string name="account_confirm_mnemonic_title">Let’s double check it</string>
+    <string name="account_confirm_mnemonic_subtitle">Select the words in the right order.</string>
+
     <string name="common_i_understand">I understand</string>
     <string name="account_mnemonic_show_warning">We are going to show your mnemonic. Make sure no one can see your screen and do not take screenshots — they can be collected by third-party malware</string>
     <string name="common_attention">Attention!</string>
