--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <string name="account_import_seed_hex_symbols">64 hex symbols</string>
+
+    <string name="account_import_mnemonic_title">Enter the words in the right order</string>
+    <string name="account_import_mnemonic_subtitle">Write words separately with one space, no commas or other signs.</string>
+    <string name="account_import_mnemonic_hint">Typically 12-word phrase (but may be 15, 18, 21 or 24)</string>
+
+    <string name="account_import_mnemonic_seed_title">Enter your raw seed</string>
+    <string name="account_import_mnemonic_json_title">Paste your Restore JSON</string>
+
+    <string name="account_confirm_mnemonic_title">Let’s double check it</string>
+    <string name="account_confirm_mnemonic_subtitle">Select the words in the right order.</string>
+
     <string name="account_confirm_mnemonic_title">Let’s double check it</string>
     <string name="account_confirm_mnemonic_subtitle">Select the words in the right order.</string>
 
