--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <string name="onboarding_create_account_v2_2_0">Create a new wallet</string>
+    <string name="onboarding_restore_account_v2_2_0">Already have a wallet</string>
+
     <string name="pincode_enter_pin_code_v2_2_0">Enter PIN code</string>
 
     <string name="wallet_receive_share_qr">Share QR code</string>
@@ -141,7 +144,6 @@
     <string name="common_error_general_title">Error</string>
     <string name="common_copy_address">Copy address</string>
     <string name="connection_error_message">Please, check internet connection and try again later.</string>
-    <string name="onboarding_restore_account">Import account</string>
     <string name="onboarding_terms_and_conditions_1">I have read and agreed to
 Terms and Conditions and Privacy Policy</string>
     <string name="onboarding_terms_and_conditions_2">Terms and Conditions</string>
@@ -161,7 +163,6 @@ transfers will appear here</string>
     <string name="about_terms">Terms and conditions</string>
     <string name="language_title">Language</string>
     <string name="connection_management_title">Networks</string>
-    <string name="onboarding_create_account">Create account</string>
     <string name="username_setup_choose_title">Name</string>
     <string name="username_setup_hint">This name will be displayed only for you and stored locally on your mobile device.</string>
     <string name="common_ok">OK</string>
