--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string name="onboarding_create_account_v2_2_0">Create a new wallet</string>
-    <string name="onboarding_restore_account_v2_2_0">Already have a wallet</string>
+    <string name="accounts_change_chain_account">Change %s account</string>
+    <string name="accounts_add_chain_account">Add %s account</string>
+
+    <string name="onboarding_create_wallet">Create a new wallet</string>
+    <string name="onboarding_restore_wallet">Already have a wallet</string>
+
+    <string name="account_create_account">Create a new account</string>
+    <string name="account_restore_account">Already have an account</string>
 
     <string name="pincode_enter_pin_code_v2_2_0">Enter PIN code</string>
 
@@ -204,7 +210,6 @@ transfers will appear here</string>
     <string name="common_edit">Edit</string>
     <string name="common_done">Done</string>
     <string name="accounts_add_wallet">Add wallet</string>
-    <string name="accounts_add_account">Add account</string>
     <string name="account_add_already_exists_message">Account already exists. Please, try another one.</string>
     <string name="about_website">Official Website</string>
     <string name="about_github">Github Source Code</string>
