--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -235,10 +235,9 @@
     <string name="import_seed_invalid_message">Пожалуйста, убедитесь, что введенные данные содержат 64 hex символа.</string>
     <string name="mnemonic_error_try_another_one">Пожалуйста, попробуйте другую.</string>
     <string name="account_export_action">Экспортировать</string>
-    <string name="export_json_password_explanation">Пароль необходим для шифрования вашей учетной записи и сохранения как Recovery JSON. Пожалуйста, придумайте пароль для продолжения работы.</string>
     <string name="export_json_password_new">Новый пароль</string>
     <string name="export_json_password_confirm">Подтверждение пароля</string>
-    <string name="export_json_password_match_error">Неверный пароль</string>
+    <string name="export_json_password_match_error">Пароли не совпадают</string>
     <string name="account_export_password_change">Сменить пароль</string>
     <string name="export_mnemonic_with_derivation" formatted="false">Сеть: %s
 Мнемоника: %s
