Separate new view for user total rewards

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <string name="staking_your_rewards">Your rewards</string>
+
     <string name="common_explore">Explore</string>
 
     <string name="dapp_dapps">DApps</string>
