--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -414,9 +414,9 @@
   <string name="staking_reward_payouts_empty_rewards_v2_2_0">Замечательно! Все вознаграждения выплачены</string>
   <string name="staking_reward_payouts_payout_all">Выплатить все (%s)</string>
   <string name="staking_reward_payouts_title">Ожидаемые вознаграждения</string>
-  <string name="staking_reward_payouts_title_v2_2_0">Невыплаченные вознаграждения</string>
+  <string name="staking_reward_payouts_title_v2_2_0">Невыплаченные награды</string>
   <string name="staking_rewards_apy">Вознаграждение (APY)</string>
-  <string name="staking_rewards_destination_title">Назначение вознаграждений</string>
+  <string name="staking_rewards_destination_title_v2_0_0">Назначение наград</string>
   <string name="staking_rewards_learn_more">Подробнее о вознаграждениях</string>
   <string name="staking_rewards_learn_more_v2_2_0">Подробнее о вознаграждениях</string>
   <string name="staking_select_custom">Выбрать самому</string>
